fixed footer alignment

--- a/themes/qtec/assets/sass/partials/footer.scss
+++ b/themes/qtec/assets/sass/partials/footer.scss
@@ -22,7 +22,7 @@
   }
   grid-column: 2 / span 2;
   @include breakpoint ($tablet-portrait){
-    grid-column: 3 /span 2;
+    grid-column: 3 / span 2;
   }
 }
 
@@ -50,7 +50,7 @@ margin: 5px;
     color: white;
   }
   @include breakpoint ($tablet-portrait){
-    grid-column: 3 / span 2;
+    grid-column: 3;
   }
 }
 
